--- a/server/plugins/Terraria/Data/projectiles.yml
+++ b/server/plugins/Terraria/Data/projectiles.yml
@@ -2555,6 +2555,7 @@
         name: 咒焰火球
         velocity: 0.5
 咒焰火球:
+    projDisguiseName: 咒火球
     liveTime: 10
     noGravityTicks: 0
     buffInflict:
