yoyo & flail balancing

--- a/server/plugins/Terraria/Data/items.yml
+++ b/server/plugins/Terraria/Data/items.yml
@@ -1888,6 +1888,17 @@
     damageSummonMulti: 0.05
   worth: 5000000
   rarity: 8
+玄秘颅冠:
+  item: LEASH
+  lore:
+  - §r[饰品]
+  attributes:
+    maxHealthMulti: 5.91
+    fixedHealingMulti: 0.6
+    damageTakenMulti: -0.15
+    speedMulti: 0.03
+  worth: 400000
+  rarity: 1100
 天蓝石:
   item: LEASH
   lore:
@@ -5187,7 +5198,7 @@ Drew之翼:
 木制回力镖:
   item: STICK
   attributes:
-    damage: 19
+    damage: 95
     damageType: Melee
     crit: 4
     knockback: 5
@@ -5197,7 +5208,7 @@ Drew之翼:
 附魔回力镖:
   item: STICK
   attributes:
-    damage: 26
+    damage: 110
     damageType: Melee
     crit: 4
     knockback: 8
@@ -5207,7 +5218,7 @@ Drew之翼:
 荆棘旋刃:
   item: STICK
   attributes:
-    damage: 39
+    damage: 115
     damageType: Melee
     crit: 4
     knockback: 8
@@ -5217,7 +5228,7 @@ Drew之翼:
 烈焰回旋镖:
   item: STICK
   attributes:
-    damage: 100
+    damage: 260
     damageType: Melee
     crit: 4
     knockback: 8
@@ -5230,7 +5241,7 @@ Drew之翼:
   lore:
   - §r追杀敌人
   attributes:
-    damage: 288
+    damage: 495
     damageType: Melee
     crit: 4
     knockback: 5
@@ -5240,7 +5251,7 @@ Drew之翼:
 链锤:
   item: STICK
   attributes:
-    damage: 18
+    damage: 75
     damageType: Melee
     crit: 4
     knockback: 4.6
@@ -5250,7 +5261,7 @@ Drew之翼:
 火焰锤:
   item: STICK
   attributes:
-    damage: 24
+    damage: 87
     damageType: Melee
     crit: 4
     knockback: 4.6
@@ -5261,7 +5272,7 @@ Drew之翼:
 蓝月:
   item: STICK
   attributes:
-    damage: 85
+    damage: 194
     damageType: Melee
     crit: 4
     knockback: 6
@@ -5271,7 +5282,7 @@ Drew之翼:
 太极连枷:
   item: STICK
   attributes:
-    damage: 135
+    damage: 462
     damageType: Melee
     crit: 4
     knockback: 6
@@ -5283,7 +5294,7 @@ Drew之翼:
   lore:
   - §r喷出自动寻敌泡泡
   attributes:
-    damage: 346
+    damage: 788
     damageType: Melee
     crit: 4
     knockback: 4.5
@@ -5293,7 +5304,7 @@ Drew之翼:
 日耀喷发剑:
   item: DIAMOND_SWORD
   attributes:
-    damage: 608
+    damage: 607
     damageType: Melee
     crit: 4
     knockback: 2
@@ -5306,7 +5317,7 @@ Drew之翼:
   lore:
   - §r旋转至少一秒后掷出将额外射出一股赤潮涡流
   attributes:
-    damage: 68
+    damage: 81
     damageType: Melee
     crit: 4
     knockback: 6
@@ -5316,7 +5327,7 @@ Drew之翼:
 海胆链球:
   item: STICK
   attributes:
-    damage: 56
+    damage: 78
     damageType: Melee
     crit: 4
     knockback: 6
@@ -5328,7 +5339,7 @@ Drew之翼:
   lore:
   - §r发射一个受重力影响的巨蛤，在留空一段时间后会造成更高伤害。
   attributes:
-    damage: 350
+    damage: 369
     damageType: Melee
     crit: 4
     knockback: 10
@@ -5340,7 +5351,7 @@ Drew之翼:
   lore:
   - §r击中敌人后脱手而出
   attributes:
-    damage: 641
+    damage: 1029
     damageType: Melee
     crit: 4
     knockback: 8
@@ -5366,11 +5377,11 @@ Drew之翼:
   - §r似乎可以在与某种海洋巨兽的战斗中立下汗马功劳……
   - §r“如有鬼助”
   attributes:
-    damage: 2786
+    damage: 4145
     damageType: Melee
     crit: 4
     knockback: 10
-    useTime: 15
+    useTime: 60
   worth: 20000000
   rarity: 10
 晨星链刃:
@@ -5378,7 +5389,7 @@ Drew之翼:
   lore:
   - §r发射两个日耀链剑
   attributes:
-    damage: 234
+    damage: 390
     damageType: Melee
     crit: 4
     knockback: 2.5
@@ -5391,11 +5402,11 @@ Drew之翼:
   - §r重型链枷，每一个都内置有在挥舞时启动的强劲发电机
   - §r丢出龙首，龙首会释放电场
   attributes:
-    damage: 1366
+    damage: 1906
     damageType: Melee
     crit: 4
     knockback: 2.5
-    useTime: 10
+    useTime: 60
   worth: 24000000
   rarity: 1100
 新月链刃:
@@ -5403,7 +5414,7 @@ Drew之翼:
   lore:
   - §r以寒锋恰似拜月者希冀之月
   attributes:
-    damage: 1075
+    damage: 1353
     damageType: Melee
     crit: 4
     knockback: 4
@@ -5428,11 +5439,11 @@ Drew之翼:
   - §r发射龙头，释放龙息火星
   - §r击中敌人时召唤花瓣
   attributes:
-    damage: 2525
+    damage: 785
     damageType: Melee
     crit: 4
     knockback: 9
-    useTime: 20
+    useTime: 45
     buffInflictMelee: 神圣之火|60|1
   worth: 30000000
   rarity: 15
@@ -5442,7 +5453,7 @@ Drew之翼:
   - §r挥出由星流金属构成的鞭子
   - §r“这何尝不是一种脊髓剑”
   attributes:
-    damage: 2414
+    damage: 4042
     damageType: Melee
     crit: 4
     knockback: 8
@@ -5953,9 +5964,9 @@ Drew之翼:
 木制悠悠球:
   item: STICK
   lore:
-  - §r掷出悠悠球后再次使用可以收回
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 30
+    damage: 40
     damageType: Melee
     crit: 4
     projectileSpeed: 16
@@ -5965,8 +5976,10 @@ Drew之翼:
   rarity: 0
 亚马逊悠悠球:
   item: STICK
+  lore:
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 40
+    damage: 50
     damageType: Melee
     crit: 4
     projectileSpeed: 16
@@ -5976,8 +5989,10 @@ Drew之翼:
   rarity: 1
 抑郁球:
   item: STICK
+  lore:
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 87
+    damage: 88
     damageType: Melee
     crit: 4
     projectileSpeed: 16
@@ -5987,8 +6002,10 @@ Drew之翼:
   rarity: 1
 克苏鲁之眼悠悠球:
   item: STICK
+  lore:
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 534
+    damage: 342
     damageType: Melee
     crit: 4
     projectileSpeed: 16
@@ -5998,8 +6015,10 @@ Drew之翼:
   rarity: 8
 泰拉悠悠球:
   item: STICK
+  lore:
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 306
+    damage: 204
     damageType: Melee
     crit: 14
     projectileSpeed: 16
@@ -6012,9 +6031,9 @@ Drew之翼:
   lore:
   - §r向下召唤星星
   - §r一只十分灵活的悠悠球
-  - §r掷出悠悠球后再次使用可以收回
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 36
+    damage: 38
     damageType: Melee
     crit: 4
     projectileSpeed: 16
@@ -6024,8 +6043,10 @@ Drew之翼:
   rarity: 3
 涡旋:
   item: STICK
+  lore:
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 55
+    damage: 40
     damageType: Melee
     crit: 4
     projectileSpeed: 12.5
@@ -6038,8 +6059,9 @@ Drew之翼:
   lore:
   - §r有敌人在附近时发射羽毛
   - §r一只十分灵活的悠悠球
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 78
+    damage: 102
     damageType: Melee
     crit: 4
     projectileSpeed: 16
@@ -6052,8 +6074,9 @@ Drew之翼:
   lore:
   - §r有敌人在附近时发射凝胶束
   - §r一只十分灵活的悠悠球
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 80
+    damage: 82
     damageType: Melee
     crit: 4
     projectileSpeed: 32
@@ -6066,8 +6089,9 @@ Drew之翼:
   lore:
   - §r来自古代东方的神秘力量
   - §r一只十分灵活的悠悠球
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 152
+    damage: 184
     damageType: Melee
     crit: 4
     projectileSpeed: 32
@@ -6080,8 +6104,9 @@ Drew之翼:
   lore:
   - §r有敌人在附近时发射星星
   - §r一只十分灵活的悠悠球
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 136
+    damage: 163
     damageType: Melee
     crit: 4
     projectileSpeed: 36
@@ -6094,8 +6119,9 @@ Drew之翼:
   lore:
   - §r有敌人在附近时发射硫磺火激光
   - §r一只十分灵活的悠悠球
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 354
+    damage: 223
     damageType: Melee
     crit: 4
     projectileSpeed: 36
@@ -6108,8 +6134,9 @@ Drew之翼:
   lore:
   - §r发射孢子云
   - §r一只十分灵活的悠悠球
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 226
+    damage: 179
     damageType: Melee
     crit: 4
     projectileSpeed: 36
@@ -6122,8 +6149,9 @@ Drew之翼:
   lore:
   - §r击中敌人时产生爆炸
   - §r一只十分灵活的悠悠球
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 240
+    damage: 307
     damageType: Melee
     crit: 4
     projectileSpeed: 40
@@ -6136,8 +6164,9 @@ Drew之翼:
   lore:
   - §r有敌人在附近时发射瘟疫搜寻者
   - §r一只十分灵活的悠悠球
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 480
+    damage: 516
     damageType: Melee
     crit: 4
     projectileSpeed: 40
@@ -6151,8 +6180,9 @@ Drew之翼:
   - §r以辐射破坏附近敌人的生物组织和机械原件
   - §r一只十分灵活的悠悠球
   - §r用幻星的传统方式料理你的敌人，是舌尖上的灾厄的著名菜点
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 417
+    damage: 720
     damageType: Melee
     crit: 4
     projectileSpeed: 54
@@ -6163,10 +6193,11 @@ Drew之翼:
 日炎:
   item: STICK
   lore:
-  - §r击中敌人时产生强大的圣火爆炸
+  - §r击中敌人时爆发出强大的圣火
   - §r一只十分灵活的悠悠球
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 676
+    damage: 385
     damageType: Melee
     crit: 4
     projectileSpeed: 54
@@ -6179,8 +6210,9 @@ Drew之翼:
   lore:
   - §r接近这个悠悠球的敌人的生命会被汲取
   - §r一只十分灵活的悠悠球
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 1593
+    damage: 1100
     damageType: Melee
     crit: 4
     projectileSpeed: 48
@@ -6193,8 +6225,9 @@ Drew之翼:
   lore:
   - §r以死亡激光抹除周围敌人的存在
   - §r一只超级灵活的悠悠球
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 1747
+    damage: 1560
     damageType: Melee
     crit: 4
     projectileSpeed: 54
@@ -6208,8 +6241,9 @@ Drew之翼:
   - §r我看到了过去，当下，将来...还有你的死期
   - §r电击附近敌人
   - §r一只超级灵活的悠悠球
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 1512
+    damage: 1272
     damageType: Melee
     crit: 4
     projectileSpeed: 54
@@ -6222,9 +6256,10 @@ Drew之翼:
   lore:
   - §r眨眼之间摧毁宇宙
   - §r发射能爆裂出死亡射线的寰宇之球攻击敌人
-  - §r一只十分灵活的悠悠球
+  - §r一只十分甚至九分灵活的悠悠球
+  - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 500
+    damage: 319
     damageType: Melee
     crit: 4
     projectileSpeed: 60
