--- a/server/plugins/Terraria/Data/items.yml
+++ b/server/plugins/Terraria/Data/items.yml
@@ -5374,7 +5374,8 @@ Drew之翼:
   lore:
   - §r由最勇敢的战士使用
   - §r击中敌人时降低其防御
-  - §r似乎可以在与某种海洋巨兽的战斗中立下汗马功劳……
+  - §r似乎可以在与某些海洋巨兽的战斗中立下汗马功劳……
+  - §r对猪鲨公爵，硫海遗爵，巨像乌贼和猎魂鲨造成额外伤害
   - §r“如有鬼助”
   attributes:
     damage: 4145
@@ -6259,7 +6260,7 @@ Drew之翼:
   - §r一只十分甚至九分灵活的悠悠球
   - §7▷ 悠悠球：使用物品时投出悠悠球，再次使用物品即可收回
   attributes:
-    damage: 319
+    damage: 313
     damageType: Melee
     crit: 4
     projectileSpeed: 60
