--- a/server/plugins/Terraria/Data/menus.yml
+++ b/server/plugins/Terraria/Data/menus.yml
@@ -90,7 +90,6 @@ intro:
             - §r您可以基于您的喜好个性化部分游戏体验
             - §r总体而言，此部分包括以下方面的设置：
             - §b- 泰拉瑞亚第三人称视角（比原版更远）
-            - §b- 粒子量、粒子特效开关
             - §b- UI大小（物品栏中物品信息的显示大小仍由Minecraft的界面尺寸设置决定）
             - §b- 辅助瞄准功能
             - §b- 各种键位绑定（现有按键均可自由设置）
@@ -100,8 +99,10 @@ intro:
             col: 4
             name: §r[信息] 鸣谢
             lore:
-            - §r感谢中/英文灾厄Wiki、Terraria Wiki提供的信息
+            - §r感谢来源于中/英文灾厄Wiki、Terraria Wiki的信息和贴图
             - §r感谢KuLou_D制作的长直模型
+            - §r感谢潮汐之月制作的天蓝套模型
+            - §r感谢天狼星_HMS_Sirius在编写配置文件工作中提供的帮助
             - §r感谢群友们的陪伴支持
         back:
             row: 5
@@ -123,8 +124,6 @@ biomes:
             name: §r[信息] 世界生成
             lore:
             - §r世界中会生成各种矿物，包括空中的起源之簇与地上的陨石坑
-            - §a考虑到长期多人服务器中新手的游戏体验，世界中不会生成宝箱等战利品
-            - §a与之相对，新手礼包将囊括更多物品以保证新手开荒体验
             - §r世界中会生成铁轨网络；早期玩家即可制作矿车以更快地跑图、寻找生物群系
             - §r服务器的文件夹中会自动生成出生点附近的生物群系地图，服主可考虑向玩家公开以进一步保证跑图体验
         worldInfo:
